06_createIngress/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quest-ingress-service
  annotations:
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-issuer
    #kubernetes.io/ingress.allow-https: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    #kubernetes.io/ingress.global-static-ip-name: 34.136.164.149
    #cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # controls whether the ingress is modified ‘in-place’,
    # or a new one is created specifically for the HTTP01 challenge.
    acme.cert-manager.io/http01-edit-in-place: "true"
    #cert-manager.io/cluster-issuer = module.cert_manager.cluster_issuer_name
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
  - hosts:
      - rearc.abishaiep.io
    secretName: letsencrypt-staging #selfsigned-cert-tls #twelvefactor
  rules:
  - host: rearc.abishaiep.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quest-example-service
            port:
              number: 3000
